--- a/web.html
+++ b/web.html
@@ -45,7 +45,7 @@
         <h1>Portfolio</h1>
         <div class="portfolio-content">
             <div class="project">
-                <h2><a href="https://github.com/ArrowWSir/Ahad/blob/main/web.html" target="_blank">HTML Codes for the Website</a></h2>
+                <h2>Project 1: <a href="https://github.com/ArrowWSir/Ahad/blob/main/web.html" target="_blank">HTML Codes for the Website</a></h2>
             </div>
             <div class="project">
                 <h2>Project 2</h2>
