--- a/web.html
+++ b/web.html
@@ -4,22 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+    <!-- Link to your CSS file -->
     <link rel="stylesheet" href="styles.css">
-    <style>
-        body {
-            font-size: 12px;
-        }
-
-        .profile-image {
-            width: 4em;  /* Half the original size (4 times the font size) */
-            height: auto;
-        }
-
-        .interest-image {
-            width: 8em;
-            height: auto;
-        }
-    </style>
 </head>
 <body>
 
@@ -48,7 +34,7 @@
                 <h2>Project 1: <a href="https://github.com/ArrowWSir/Ahad/blob/main/web.html" target="_blank">HTML Codes for the Website</a></h2>
             </div>
             <div class="project">
-                <h2>Project 2</h2>
+                <h2>CSS Code for the Website: <a href="webcss.txt" target="_blank">webcss.txt</a></h2>
             </div>
         </div>
     </section>
