--- a/web.html
+++ b/web.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <!-- Link to your CSS file -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -34,7 +33,7 @@
                 <h2>Project 1: <a href="https://github.com/ArrowWSir/Ahad/blob/main/web.html" target="_blank">HTML Codes for the Website</a></h2>
             </div>
             <div class="project">
-                <h2>CSS Code for the Website: <a href="webcss.txt" target="_blank">webcss.txt</a></h2>
+                <h2>CSS Code for the Website: <a href="https://github.com/ArrowWSir/Ahad/blob/main/styles.css" target="_blank">styles.css</a></h2>
             </div>
         </div>
     </section>
