--- a/web.html
+++ b/web.html
@@ -33,7 +33,7 @@
                 <h2>Project 1: <a href="https://github.com/ArrowWSir/Ahad/blob/main/web.html" target="_blank">HTML Codes for the Website</a></h2>
             </div>
             <div class="project">
-                <h2>CSS Code for the Website: <a href="https://github.com/ArrowWSir/Ahad/blob/main/styles.css" target="_blank">styles.css</a></h2>
+                <h2>Project 2: <a href="https://github.com/ArrowWSir/Ahad/blob/main/styles.css" target="_blank">CSS Code for the Website</a></h2>
             </div>
         </div>
     </section>
