--- a/web.html
+++ b/web.html
@@ -12,7 +12,7 @@
         <h1>About Me</h1>
         <div class="about-content">
             <img src="458732635_1682873919232908_6609174444088284152_n.jpg" alt="Placeholder for profile image" class="profile-image">
-            <p>Hi there! I am a dedicated Computer Science student with a strong passion for programming and problem-solving. I specialize in Python, Java, and HTML, and I am continually exploring new technologies to enhance my skill set. I have a keen interest in both the back-end and front-end aspects of software development, and I am always excited to take on new challenges.</p>
+            <p>Hi there! I am a dedicated 2nd year student of Computer Science with a strong passion for programming and problem-solving. I specialize in Python, Java, and HTML, and I am continually exploring new technologies to enhance my skill set. I have a keen interest in both the back-end and front-end aspects of software development, and I am always excited to take on new challenges.</p>
             <p>In addition to software engineering, I bring experience in software testing and graphic design, which helps me understand user expectations and deliver polished, user-friendly applications. I thrive in team environments, adapt quickly to new situations, and enjoy learning from others to grow as a professional.</p>
         </div>
     </section>
